Replace subdomain add preflight with exists checkt
