# src/main/java/me/sonam/organization/Router.java
@@ -36,10 +36,8 @@ public class Router {
                         .and(accept(MediaType.APPLICATION_JSON)), handler::getOrganizationsBySubdomain)
                 .andRoute(GET("/organizations/subdomain/{subdomain}/users/{userId}/organizations/{organizationId}")
                         .and(accept(MediaType.APPLICATION_JSON)), handler::userExistsInSubdomainOrganization)
-                .andRoute(GET("/organizations/subdomain/{subdomain}/users/{userId}/organizations/{organizationId}/can-add")
-                        .and(accept(MediaType.APPLICATION_JSON)), handler::canAddUserToSubdomainOrganization)
-                .andRoute(GET("/organizations/subdomain/{subdomain}/organizations/{organizationId}/can-add-user")
-                        .and(accept(MediaType.APPLICATION_JSON)), handler::canAddUserToSubdomainOrganizationWithoutUser)
+                .andRoute(GET("/organizations/subdomain/{subdomain}/organizations/{organizationId}/exists")
+                        .and(accept(MediaType.APPLICATION_JSON)), handler::organizationExistsInSubdomain)
                 .andRoute(GET("/organizations/subdomain/{subdomain}")
                         .and(accept(MediaType.APPLICATION_JSON)), handler::getOrganizationBySubdomain)
                 .andRoute(POST("/organizations/subdomain/{subdomain}/organizations/{organizationId}")
