# src/main/java/me/sonam/organization/handler/OrganizationBehavior.java
@@ -18,8 +18,7 @@ public interface OrganizationBehavior {
     Mono<Organization> getOrganizationBySubdomain(String subdomain);
     Mono<Page<Organization>> getOrganizationsBySubdomain(String subdomain, Pageable pageable);
     Mono<Boolean> userExistsInSubdomainOrganization(String subdomain, UUID userId, UUID organizationId);
-    Mono<Boolean> canAddUserToSubdomainOrganization(String subdomain, UUID userId, UUID organizationId);
-    Mono<Boolean> canAddUserToSubdomainOrganization(String subdomain, UUID organizationId);
+    Mono<Boolean> organizationExistsInSubdomain(String subdomain, UUID organizationId);
     Mono<List<Organization>> getOrganizationByIds(List<UUID> organizationIdList);
     Mono<Organization> createOrganization(Mono<OrganizationBody> organizationBodyMono);
     Mono<Organization> updateOrganization(Mono<OrganizationBody> organizationBodyMono);
